# multi-agent

./: .env.example  .gitignore  MCP_INTEGRATION_GUIDE.md  README.md  main.py  pyproject.toml
soc_automation/agents/: auto_executor.py  data_collector.py  decision_maker.py  error_analyzer.py  notification.py  sop_searcher.py
soc_automation/config/: agent_prompts.py  mcp_config.json  mcp_servers.json  settings.py
soc_automation/mcp_client/: __init__.py  __main__.py  helpers.py
soc_automation/utils/: error_patterns.py  logger.py  state.py
